<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mondayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeMonday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tuesdayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeTuesday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/wednesdayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeWednesday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/thursdayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeThursday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fridayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeFriday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/saturdayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeSaturday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sundayOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTimeSunday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringBack" />

</LinearLayout>