<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioOpenTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/stringOpenTimes" />

        <RadioButton
            android:id="@+id/radioEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringEvents" />

        <RadioButton
            android:id="@+id/radioFacilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringFacilities" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainButton" />

</LinearLayout>